[package]
name = "stm32sql"
version = "0.1.0"
edition = "2024"

[dependencies]
stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f401"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6.4"
panic-halt = "1.0.0"
cortex-m-semihosting = "0.5"
rtt-target = "0.6.1"
